# MiniRenderer

./: .clang-format  CMakeLists.txt  Readme.md
images/: boogie.tga  boogieDepth.tga
include/: graphics.h  tgaImage.h
include/resource/: material.h  mesh.h  model.h
include/util/: geometry.h  tgaImage.h
src/: graphics.cpp  main.cpp  tgaImage.cpp
src/resource/: material.cpp  mesh.cpp  model.cpp
src/util/: geometry.cpp  tgaImage.cpp
